# tree_practice

./: .clang-format  LICENSE  README.md
.github/workflows/: build-and-lint.yml
src/: CMakeLists.txt  REFLECTION.md  bst.c  bst.h  checkBst.c  checkBst.h  delete.c  delete.h  inorder.c  inorder.h  iterator.c  iterator.h  main.c  stack.c  stack.h  statistic.c  statistic.h
